Fixed shape covering iframe

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -14,7 +14,9 @@ section {
 }
 
 section.products {
-  margin-top: -180px;
+  margin-top: -2px;
+  position: relative;
+  background-color: @color_bright_text;
 }
 
 /**
