--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -18,15 +18,12 @@ header {
 header:before {
   content: "";
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
-  height: calc(100vw * 0.42vw);
-  transform: scaleY(0.5);
-  transform-origin: center bottom;
-  background-image: url(../images/shape.svg);
-  background-repeat: no-repeat;
-  background-position: center bottom;
+  height: 100%;
+  background-color: transparent;
+  z-index: 0;
 }
 
 header iframe {
